# dds-hexmeshing

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  HexMeshWorkshop.py  LICENSE  README.md  dds.py  ipython.sh  obj2tets.py  paths.json  pyproject.toml  python.sh  settings.json  setup.py
algorithms/: AlgoHex.yml  Gmsh.yml  HexBox.yml  MEDIT_to_VTKv2.yml  OVM_to_MEDIT.yml  README.md  __init__.py  automatic_polycube.yml  automatic_polycube_gui.yml  clear_database_and_datafiles  evocube.post.py  evocube.pre.py  evocube.yml  extract_surface.yml  fastbndpolycube.yml  global_padding.post.py  global_padding.yml  graphcut_labeling_gui.yml  gridgenerator.yml  hex_mesh_stats.yml  import_MAMBO  labeling_painter.yml  labeling_stats.yml  marchinghex.py  marchinghex.yml  marchinghex_gridgenerator.yml  marchinghex_hexmeshing.post.py  marchinghex_hexmeshing.yml  naive_labeling.yml  polycube_withHexEx.yml  rb_generate_deformation.post.py  rb_generate_deformation.yml  rb_generate_quantization.post.py  rb_generate_quantization.yml  robustPolycube.py  surface_mesh_stats.yml  tet_mesh_stats.yml  volume_labeling.yml  write_glb.yml  write_labeling_as_geogram.yml  (+1 more)
apps/: GMSH.cpp  MeshGems.cpp  NETGEN.cpp  custom_command.cpp  evolabel.cpp  expand.cpp  extract_surface.cpp  fast_surface_polycube.cpp  graphcut_labeling.cpp  naive_labeling.cpp  polycube_withHexEx.cpp  population.cpp  postprocess.cpp  robustPolycube.cpp  step2mesh.cpp  test.cpp
cli/: AlgoHex  Gmsh  HexBox  README.md  automatic_polycube  clear_testdata  current_datafolder  enumerate_children  evocube  extract_surface  fastbndpolycube  global_padding  graphcut_labeling  import_MAMBO  import_step  labeling_painter  list_collections  marchinghex  mesh_stats  naive_labeling  polycube_withHexEx  preprocess_polycube  print_children  print_history  print_mesh_stats  recursive_enumeration  recursive_update  robustPolycube  typeof  view  volume_labeling
collection_manager/: __init__.py
data_folder_types/: __init__.py
data_subfolder_types/: README.md  STEP.Mayo.yml  STEP.yml  hex-mesh.own-viewer.yml  hex-mesh.yml  labeling.Graphite.yml  labeling.accessors.py  labeling.polycube.yml  labeling.surface.yml  labeling.yml  marchinghex_grid.Graphite.yml  marchinghex_grid.yml  tet-mesh.Graphite.yml  tet-mesh.yml
definitions/: paths.yml
definitions/algorithms/: AlgoHex.yml  Gmsh.yml  HexBox.yml  MEDIT_to_VTKv2.yml  MG-Tetra.SALOME_script.py  MG-Tetra.yml  OVM_to_MEDIT.yml  README.md  automatic_polycube.yml  automatic_polycube_gui.yml  batch_processing.py  compare.py  evocube.post.py  evocube.pre.py  evocube.yml  extract_surface+volume.pre.py  extract_surface+volume.yml  extract_surface.pre.py  extract_surface.yml  fastbndpolycube.yml  generate_report.README.md  generate_report.py  generate_report.template.html  generate_stats_table.py  generate_tet_meshes_for_PolyCut.py  global_padding.post.py  global_padding.yml  graphcut_labeling.yml  graphcut_labeling_gui.yml  hex_mesh_stats.yml  import_MAMBO.py  import_OctreeMeshing.py  import_OctreeMeshing_meshes_from_Evocube_results.py  inner_smoothing.yml  labeling_painter.yml  labeling_stats.yml  marchinghex.py  marchinghex_gridgenerator.yml  marchinghex_hexmeshing.post.py  marchinghex_hexmeshing.yml  (+18 more)
definitions/data_folder_types/: README.md  hex-mesh.accessors.py  hex-mesh.graphite.yml  hex-mesh.yml  labeling.accessors.py  labeling.f3d.yml  labeling.graphite.lua  labeling.graphite.yml  labeling.surface.yml  labeling.yml  marchinghex_grid.Graphite.yml  marchinghex_grid.yml  obj_cad.graphite.yml  obj_cad.yml  step.Mayo.yml  step.f3d.yml  step.mayo.yml  step.yml  stl.graphite.yml  stl.yml  tet-mesh.accessors.py  tet-mesh.f3d.yml  tet-mesh.graphite.yml  tet-mesh.yml
from_cli/: AlgoHex  Gmsh  Gmsh_smoothing  HexBox  automatic_polycube  batch_processing  collections  datafolder  evocube  extract_surface  fastbndpolycube  generate_report  global_padding  graphcut_labeling  import_MAMBO  import_step  inner_smoothing  labeling_painter  marchinghex  mixed_smoothing  naive_labeling  polycube_withHexEx  preprocess_polycube  print_children  print_history  print_mesh_stats  recursive_update  robustPolycube  typeof  view  volume_labeling  write_glb
from_python/: batch_Gmsh.md  batch_Gmsh.py  batch_Gmsh_analysis.py  batch_processing.py  batch_processing_analysis.py  import_Evocube_results.py
glue_code/: VTK_with_CAD_features.py  graphite_labeling.lua
include/: collections.h  cxxopts_ParseResult_custom.h  date_time.h  graphite_script.h  info_file.h  mesh_stats.h  parameters.h  paths.h  trace.h  user_confirmation.h
modules/: README.md  algorithms.py  collection_manager.py  collections_manager.py  data_folder_types.py  print_folder_as_tree.py  settings.py  user_input.py
modules/algorithms/: __init__.py
modules/data_folder_types/: __init__.py
parametric_string/: __init__.py
python/: README.md  custom_ipython_prompt.sh  custom_python_prompt.sh  import_Evocube_results.py
python-scripts/: step2mesh_GMSH.py  step2mesh_SALOME.py
scripts/: AlgoHex  Gmsh  HexBox  automatic_polycube  current_datafolder  custom_python_prompt.sh  evocube  extract_surface  fastbndpolycube  graphcut_labeling  import_MAMBO  import_step  labeling_painter  list_collections  marchinghex  naive_labeling  polycube_withHexEx  preprocess_polycube  recursive_enumeration  robustPolycube  typeof  view  volume_labeling
settings/: __init__.py
src/: trace.cpp
user_input/: __init__.py
(+3 files in other folders)
