[project]
name = "HexMeshWorkshop"
version = "0.4.1"
description = "High-level interface for hex-meshing algorithms"
authors = [
    { name = "Sébastien Mestrallet", email = "sebastien.mestrallet@hey.com" }
]
dependencies = [
    "gmsh>=4.11.1",
    "rich>=13.6.0",
    "ipython>=8.16.1",
    "subprocess_tee>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
