[project]
name = "dds"
version = "0.7.0"
description = "Semantic data folders"
authors = [
    { name = "Sébastien Mestrallet", email = "sebastien.mestrallet@hey.com" }
]
dependencies = [
    "gmsh>=4.11.1",
    "rich>=13.6.0",
    "ipython>=8.16.1",
    "subprocess_tee>=0.4.1",
    "icecream>=2.1.3",
    "questionary>=2.0.1",
    "pyyaml>=6.0.1",
    "parse>=1.20.2",
    "meshio>=5.3.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

# see https://github.com/mitsuhiko/rye/issues/515#issuecomment-1858983801
[tool.hatch.build.targets.wheel]
packages = ["src/HexMeshWorkshop"]

# for Zed to use the proper Python interpreter
# see https://github.com/zed-industries/zed/discussions/6646
# see https://github.com/zed-industries/zed/blob/main/docs/src/languages/python.md
[tool.pyright]
venvPath = "."
venv = ".venv"
